--- a/css/styles.css
+++ b/css/styles.css
@@ -246,3 +246,80 @@ img {
      letter-spacing: -0.25px;
      margin: 0;
 }
+
+/* ARTICLES */
+.articles {
+     background-color: #fafafa;
+     padding-top: 80px;
+     padding-bottom: 80px;
+}
+
+.articles__title {
+     color: var(--color-title);
+     font-size: 40px;
+     font-weight: 100;
+     line-height: 64px; 
+     letter-spacing: -0.714px;
+     margin-top: 0;
+     margin-bottom: 40px;
+}
+
+.articles__list {
+     display: flex;
+     align-items: center;
+     padding: 0;
+     margin: 0;
+     list-style: none;
+}
+
+.articles__item {
+     display: flex;
+     align-items: flex-start;
+     flex-direction: column;
+     background-color: var(--color-white);
+     border-radius: 5px;
+}
+
+.articles__item:not(:last-child) {
+     margin-right: 30px;
+}
+
+.articles__img {
+     display: block;
+     width: 255px;
+     height: 200px;
+}
+
+.articles__inner {
+     padding: 24px;
+}
+
+.articles__info {
+     color: var(--color-accent);
+     font-size: 10px;
+     line-height: 18px; 
+     letter-spacing: -0.156px;
+     margin-top: 0;
+     margin-bottom: 8px;
+}
+
+.articles__link {
+     text-decoration: none;
+     color: var(--color-title);
+     font-size: 16px;
+     font-weight: 100;
+     line-height: 20px; 
+     letter-spacing: -0.286px;
+     transition: color 0.1s ease;
+}
+
+.articles__link:hover {
+     color: #2ab6d9;
+}
+
+.articles__text {
+     color: var(--color-accent);
+     font-size: 13px;
+     line-height: 18px; 
+     letter-spacing: -0.203px;
+}
