--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,11 @@ body {
      height: 100%;
      padding: 0px;
      margin: 0px;
+     font-weight: 400;
+     font-size: 14px;
+     font-style: normal;
+     line-height: normal;
+     overflow-x: hidden;
 }
 
 img {
@@ -27,15 +32,11 @@ img {
 /* CONTAINER */
 .container {
      width: 100%;
-     max-width: 1100px;
+     max-width: 1140px;
      padding-left: 20px;
      padding-right: 20px;
      margin-left: auto;
      margin-right: auto;
-     font-weight: 400;
-     font-size: 14px;
-     font-style: normal;
-     line-height: normal;
 }
 
 /* Visually Hidden */
@@ -51,6 +52,7 @@ img {
 
 /* BUTTON */
 .button {
+     position: relative;
      display: block;
      text-decoration: none;
      color: var(--color-white);
@@ -61,9 +63,27 @@ img {
      font-weight: 500;
      line-height: 28px; 
      padding: 8px 36px 8px 33px;
+     white-space: nowrap;
+}
+
+.button:hover::after {
+     content: "";
+     position: absolute;
+     top: 0;
+     left: 0;
+     width: 100%;
+     height: 100%;
+     border-radius: 22px;
+     background-color: rgba(255, 255, 255, 0.4);
 }
 
 /* Site Header */
+.site-header {
+     position: relative;
+     z-index: 50;
+     background-color: var(--color-white);
+}
+
 .site-header__container {
      display: flex;
      align-items: center;
@@ -98,4 +118,131 @@ img {
      text-decoration: none;
      color: var(--color-accent);
      letter-spacing: -0.1px;
+     padding-bottom: 28px;
+     transition: 0.1s ease;
+}
+
+.sitenav__link:hover {
+     color: var(--color-title);
+     border-bottom: #2AB6D9 solid 4px;
+}
+
+.sitenav__link:active {
+     opacity: 0.8;
+}
+
+/* HERO */
+.hero {
+     position: relative;
+     z-index: 30;
+     background-color: #fafafa;
+     background-image: url("../img/hero-bg-desktop.svg");
+     background-repeat: no-repeat;
+     background-position: calc(50% + 593px) -260px;
+}
+
+.hero__container {
+     display: flex;
+     flex-direction: column;
+     padding-top: 250px;
+     padding-bottom: 170px;
+}
+
+.hero__title {
+     color: var(--color-title);
+     font-size: 56px;
+     font-weight: 100;
+     line-height: 64px;
+     letter-spacing: -1px;
+     margin-top: 0;
+     margin-bottom: 24px;
+}
+
+.hero__info {
+     color: var(--color-accent);
+     font-size: 18px;
+     line-height: 28px; 
+     letter-spacing: -0.281px;
+     margin: 0;
+}
+
+.hero__img {
+     position: absolute;
+     right: -116px;
+     top: -120px;
+}
+
+/* FEATURES */
+.features {
+     background-color: #f4f5f7;
+     padding-top: 95px;
+     padding-bottom: 95px;
+}
+
+.features__inner {
+     margin-bottom: 72px;
+}
+
+.features__title {
+     color: var(--color-title);
+     font-size: 40px;
+     font-weight: 100;
+     line-height: 64px; 
+     letter-spacing: -0.714px;
+     margin-top: 0;
+     margin-bottom: 16px;
+}
+
+.features__text {
+     color: var(--color-accent);
+     font-size: 18px;
+     font-weight: 400;
+     line-height: 28px; 
+     letter-spacing: -0.281px;
+     margin: 0;
+}
+
+.features__list {
+     display: flex;
+     align-items: center;
+     padding: 0;
+     margin: 0;
+     list-style: none;
+}
+
+.features__item {
+     width: 255px;
+     height: 278px;
+     display: flex;
+     align-items: flex-start;
+     flex-direction: column;
+}
+
+.features__item:not(:last-child) {
+     margin-right: 30px;
+}
+
+.features__icon {
+     display: block;
+     width: 72px;
+     height: 72px;
+     margin-bottom: 40px;
+}
+
+.features__link {
+     text-decoration: none;
+     margin-bottom: 26px;
+     color: var(--color-title);
+     font-size: 24px;
+     font-weight: 100;
+     line-height: 28px;
+     letter-spacing: -0.429px;
+}
+
+.features__info {
+     color: var(--color-accent);
+     font-size: 16px;
+     line-height: 26px; 
+     letter-spacing: -0.25px;
+     margin: 0;
 }
